make sure that my training procedures generate same stuff as before

--- a/results_ipynb/debug/old_vs_new_cnn_init_params.ipynb
+++ b/results_ipynb/debug/old_vs_new_cnn_init_params.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this notebook makes sure that I can generate exactly the same model using either old or new code."
+    "this notebook makes sure that I can generate exactly the same model using either old or new code.\n",
+    "\n",
+    "reference is mostly https://github.com/leelabcnbc/tang_jcompneuro/blob/master/results_ipynb/debug/cnn_debug/cnn_fitting_demo.ipynb"
    ]
   },
   {
@@ -54,7 +56,7 @@
     "def check_parameters(params_new, params_old):\n",
     "    assert len(params_new) == len(params_old) == len(parameter_mapping)\n",
     "    for x, y in params_new.items():\n",
-    "        # print(f'check {x}', y.shape)\n",
+    "        print(f'check {x}', y.shape)\n",
     "        assert np.array_equal(y, params_old[parameter_mapping[x]])\n",
     "    \n",
     "    \n",
@@ -82,7 +84,54 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n",
+      "check conv.conv0.weight (12, 1, 9, 9)\n",
+      "check conv.conv0.bias (12,)\n",
+      "check fc.fc.weight (1, 48)\n",
+      "check fc.fc.bias (1,)\n"
+     ]
+    }
+   ],
    "source": [
     "check()"
    ]
