better training wrapper

--- a/results_ipynb/debug/old_vs_new_cnn_training.ipynb
+++ b/results_ipynb/debug/old_vs_new_cnn_training.ipynb
@@ -22,12 +22,12 @@
     "from torch.autograd import Variable\n",
     "from torch import FloatTensor\n",
     "from tang_jcompneuro_legacy import cnn as cnn_legacy\n",
-    "from tang_jcompneuro.cnn import CNN, get_loss, get_optimizer\n",
+    "from tang_jcompneuro.cnn import CNN\n",
     "from tang_jcompneuro.configs.cnn_arch import arch_dict\n",
     "from tang_jcompneuro.configs.cnn_init import init_dict\n",
     "from tang_jcompneuro.configs.cnn_opt import opt_dict\n",
-    "from tang_jcompneuro import training\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from tang_jcompneuro import training_aux\n",
+    "from torch.utils.data import TensorDataset\n",
     "from torch.backends import cudnn\n",
     "# disable cudnn for complete determinism.\n",
     "cudnn.enabled = False"
@@ -132,7 +132,7 @@
     "    y_ = rng_state.rand(num_im, 1)*0.01\n",
     "    # prepare dataset\n",
     "    # by shuffle, I will be able to test whether random seed behavior is preserved as well.\n",
-    "    return FloatTensor(X_), FloatTensor(y_)\n",
+    "    return X_, y_\n",
     "\n",
     "X, y = provide_training_dataset()"
    ]
@@ -147,7 +147,8 @@
     "    opt_param = deepcopy(opt_param)\n",
     "    opt_param.update({'seed': seed})\n",
     "    net_this = cnn_legacy.one_train_loop('baseline',\n",
-    "                                      TensorDataset(X_tensor, y_tensor),\n",
+    "                                      TensorDataset(FloatTensor(X_tensor), \n",
+    "                                                    FloatTensor(y_tensor)),\n",
     "                                       submodel_param=None, opt_param=opt_param,\n",
     "                                      loss_every=None, verbose=True)[0]\n",
     "    return net_this\n",
@@ -157,30 +158,8 @@
     "    model_new = CNN(arch_config, init_config, seed=seed)\n",
     "    model_new.cuda()\n",
     "    # generate loss and optimizer.\n",
-    "    loss_fn = get_loss(opt_param, model_new)\n",
-    "    optimizer = get_optimizer(model_new, opt_param['optimizer'])\n",
-    "    \n",
-    "    # define training phase stuff.\n",
-    "    \n",
-    "    \n",
-    "    phase1_dict = {\n",
-    "        'max_epoch': total_epoch,\n",
-    "        'lr_config': None,\n",
-    "        'early_stopping_config': None,\n",
-    "    }\n",
-    "\n",
-    "    phase_config_dict_list = [phase1_dict,]\n",
-    "    global_config_dict = {\n",
-    "        'convert_data_to_gpu': True,\n",
-    "        'loss_every_iter': 100000,  # don't show.\n",
-    "    }\n",
-    "    \n",
-    "    # 128 was used before.\n",
-    "    dataset_train = DataLoader(TensorDataset(X_tensor, y_tensor),\n",
-    "                               batch_size=128,shuffle=True)\n",
-    "    training.train(model_new, loss_fn, dataset_train, optimizer,\n",
-    "                   phase_config_dict_list,\n",
-    "                   global_config_dict=global_config_dict)\n",
+    "    training_aux.train_one_case(model_new, (X, y, None, None, None, None),\n",
+    "                               opt_param, legacy=True, legacy_epoch=total_epoch, shuffle_train=False)\n",
     "    return model_new\n"
    ]
   },
