add some neuron 553 debug

--- a/results_ipynb/single_neuron_exploration/num_params.ipynb
+++ b/results_ipynb/single_neuron_exploration/num_params.ipynb
@@ -36,7 +36,7 @@
     "def do():\n",
     "    init_config = init_config_to_use_fn()\n",
     "    arch_config_list = one_layer_models_to_explore()\n",
-    "    assert len(arch_config_list)==133  # 160 \n",
+    "    assert len(arch_config_list)==132\n",
     "    for config_name, config in arch_config_list.items():\n",
     "        model_this = CNN(config, init_config)\n",
     "        print(config_name, count_params(model_this))"
@@ -184,8 +184,7 @@
       "k13c9_nobn_k2s2max_vanilla 1675\n",
       "k13c9_nobn_k2s2max_dropout 1675\n",
       "k13c9_bn_nopool_factored 1613\n",
-      "k13c9_nobn_nopool_factored 1604\n",
-      "legacy_b12 1033\n"
+      "k13c9_nobn_nopool_factored 1604\n"
      ]
     }
    ],
