ready to run single layer exploration

--- a/results_ipynb/single_neuron_exploration/num_params.ipynb
+++ b/results_ipynb/single_neuron_exploration/num_params.ipynb
@@ -36,7 +36,7 @@
     "def do():\n",
     "    init_config = init_config_to_use_fn()\n",
     "    arch_config_list = one_layer_models_to_explore()\n",
-    "    assert len(arch_config_list)==132\n",
+    "    assert len(arch_config_list)==132//2  # since BN is removed.\n",
     "    for config_name, config in arch_config_list.items():\n",
     "        model_this = CNN(config, init_config)\n",
     "        print(config_name, count_params(model_this))"
@@ -53,137 +53,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k9c3_bn_k8s4max_vanilla 262\n",
-      "k9c3_bn_k8s4max_dropout 262\n",
       "k9c3_nobn_k8s4max_vanilla 259\n",
       "k9c3_nobn_k8s4max_dropout 259\n",
-      "k9c3_bn_k6s6max_vanilla 262\n",
-      "k9c3_bn_k6s6max_dropout 262\n",
       "k9c3_nobn_k6s6max_vanilla 259\n",
       "k9c3_nobn_k6s6max_dropout 259\n",
-      "k9c3_bn_k6s2max_vanilla 298\n",
-      "k9c3_bn_k6s2max_dropout 298\n",
       "k9c3_nobn_k6s2max_vanilla 295\n",
       "k9c3_nobn_k6s2max_dropout 295\n",
-      "k9c3_bn_k3s3max_vanilla 298\n",
-      "k9c3_bn_k3s3max_dropout 298\n",
       "k9c3_nobn_k3s3max_vanilla 295\n",
       "k9c3_nobn_k3s3max_dropout 295\n",
-      "k9c3_bn_nopool_factored 397\n",
       "k9c3_nobn_nopool_factored 394\n",
-      "k9c6_bn_k8s4max_vanilla 523\n",
-      "k9c6_bn_k8s4max_dropout 523\n",
       "k9c6_nobn_k8s4max_vanilla 517\n",
       "k9c6_nobn_k8s4max_dropout 517\n",
-      "k9c6_bn_k6s6max_vanilla 523\n",
-      "k9c6_bn_k6s6max_dropout 523\n",
       "k9c6_nobn_k6s6max_vanilla 517\n",
       "k9c6_nobn_k6s6max_dropout 517\n",
-      "k9c6_bn_k6s2max_vanilla 595\n",
-      "k9c6_bn_k6s2max_dropout 595\n",
       "k9c6_nobn_k6s2max_vanilla 589\n",
       "k9c6_nobn_k6s2max_dropout 589\n",
-      "k9c6_bn_k3s3max_vanilla 595\n",
-      "k9c6_bn_k3s3max_dropout 595\n",
       "k9c6_nobn_k3s3max_vanilla 589\n",
       "k9c6_nobn_k3s3max_dropout 589\n",
-      "k9c6_bn_nopool_factored 649\n",
       "k9c6_nobn_nopool_factored 643\n",
-      "k9c9_bn_k8s4max_vanilla 784\n",
-      "k9c9_bn_k8s4max_dropout 784\n",
       "k9c9_nobn_k8s4max_vanilla 775\n",
       "k9c9_nobn_k8s4max_dropout 775\n",
-      "k9c9_bn_k6s6max_vanilla 784\n",
-      "k9c9_bn_k6s6max_dropout 784\n",
       "k9c9_nobn_k6s6max_vanilla 775\n",
       "k9c9_nobn_k6s6max_dropout 775\n",
-      "k9c9_bn_k6s2max_vanilla 892\n",
-      "k9c9_bn_k6s2max_dropout 892\n",
       "k9c9_nobn_k6s2max_vanilla 883\n",
       "k9c9_nobn_k6s2max_dropout 883\n",
-      "k9c9_bn_k3s3max_vanilla 892\n",
-      "k9c9_bn_k3s3max_dropout 892\n",
       "k9c9_nobn_k3s3max_vanilla 883\n",
       "k9c9_nobn_k3s3max_dropout 883\n",
-      "k9c9_bn_nopool_factored 901\n",
       "k9c9_nobn_nopool_factored 892\n",
-      "k9c12_bn_k8s4max_vanilla 1045\n",
-      "k9c12_bn_k8s4max_dropout 1045\n",
       "k9c12_nobn_k8s4max_vanilla 1033\n",
       "k9c12_nobn_k8s4max_dropout 1033\n",
-      "k9c12_bn_k6s6max_vanilla 1045\n",
-      "k9c12_bn_k6s6max_dropout 1045\n",
       "k9c12_nobn_k6s6max_vanilla 1033\n",
       "k9c12_nobn_k6s6max_dropout 1033\n",
-      "k9c12_bn_k6s2max_vanilla 1189\n",
-      "k9c12_bn_k6s2max_dropout 1189\n",
       "k9c12_nobn_k6s2max_vanilla 1177\n",
       "k9c12_nobn_k6s2max_dropout 1177\n",
-      "k9c12_bn_k3s3max_vanilla 1189\n",
-      "k9c12_bn_k3s3max_dropout 1189\n",
       "k9c12_nobn_k3s3max_vanilla 1177\n",
       "k9c12_nobn_k3s3max_dropout 1177\n",
-      "k9c12_bn_nopool_factored 1153\n",
       "k9c12_nobn_nopool_factored 1141\n",
-      "k9c15_bn_k8s4max_vanilla 1306\n",
-      "k9c15_bn_k8s4max_dropout 1306\n",
       "k9c15_nobn_k8s4max_vanilla 1291\n",
       "k9c15_nobn_k8s4max_dropout 1291\n",
-      "k9c15_bn_k6s6max_vanilla 1306\n",
-      "k9c15_bn_k6s6max_dropout 1306\n",
       "k9c15_nobn_k6s6max_vanilla 1291\n",
       "k9c15_nobn_k6s6max_dropout 1291\n",
-      "k9c15_bn_k6s2max_vanilla 1486\n",
-      "k9c15_bn_k6s2max_dropout 1486\n",
       "k9c15_nobn_k6s2max_vanilla 1471\n",
       "k9c15_nobn_k6s2max_dropout 1471\n",
-      "k9c15_bn_k3s3max_vanilla 1486\n",
-      "k9c15_bn_k3s3max_dropout 1486\n",
       "k9c15_nobn_k3s3max_vanilla 1471\n",
       "k9c15_nobn_k3s3max_dropout 1471\n",
-      "k9c15_bn_nopool_factored 1405\n",
       "k9c15_nobn_nopool_factored 1390\n",
-      "k13c3_bn_k4s4max_vanilla 526\n",
-      "k13c3_bn_k4s4max_dropout 526\n",
       "k13c3_nobn_k4s4max_vanilla 523\n",
       "k13c3_nobn_k4s4max_dropout 523\n",
-      "k13c3_bn_k6s2max_vanilla 526\n",
-      "k13c3_bn_k6s2max_dropout 526\n",
       "k13c3_nobn_k6s2max_vanilla 523\n",
       "k13c3_nobn_k6s2max_dropout 523\n",
-      "k13c3_bn_k2s2max_vanilla 562\n",
-      "k13c3_bn_k2s2max_dropout 562\n",
       "k13c3_nobn_k2s2max_vanilla 559\n",
       "k13c3_nobn_k2s2max_dropout 559\n",
-      "k13c3_bn_nopool_factored 581\n",
       "k13c3_nobn_nopool_factored 578\n",
-      "k13c6_bn_k4s4max_vanilla 1051\n",
-      "k13c6_bn_k4s4max_dropout 1051\n",
       "k13c6_nobn_k4s4max_vanilla 1045\n",
       "k13c6_nobn_k4s4max_dropout 1045\n",
-      "k13c6_bn_k6s2max_vanilla 1051\n",
-      "k13c6_bn_k6s2max_dropout 1051\n",
       "k13c6_nobn_k6s2max_vanilla 1045\n",
       "k13c6_nobn_k6s2max_dropout 1045\n",
-      "k13c6_bn_k2s2max_vanilla 1123\n",
-      "k13c6_bn_k2s2max_dropout 1123\n",
       "k13c6_nobn_k2s2max_vanilla 1117\n",
       "k13c6_nobn_k2s2max_dropout 1117\n",
-      "k13c6_bn_nopool_factored 1097\n",
       "k13c6_nobn_nopool_factored 1091\n",
-      "k13c9_bn_k4s4max_vanilla 1576\n",
-      "k13c9_bn_k4s4max_dropout 1576\n",
       "k13c9_nobn_k4s4max_vanilla 1567\n",
       "k13c9_nobn_k4s4max_dropout 1567\n",
-      "k13c9_bn_k6s2max_vanilla 1576\n",
-      "k13c9_bn_k6s2max_dropout 1576\n",
       "k13c9_nobn_k6s2max_vanilla 1567\n",
       "k13c9_nobn_k6s2max_dropout 1567\n",
-      "k13c9_bn_k2s2max_vanilla 1684\n",
-      "k13c9_bn_k2s2max_dropout 1684\n",
       "k13c9_nobn_k2s2max_vanilla 1675\n",
       "k13c9_nobn_k2s2max_dropout 1675\n",
-      "k13c9_bn_nopool_factored 1613\n",
       "k13c9_nobn_nopool_factored 1604\n"
      ]
     }
