add some debugging for nonlinearity in GLM

--- a/results_ipynb/debug/glm_matlab/glm_R_vs_lassoglm_MATLAB_real_data.ipynb
+++ b/results_ipynb/debug/glm_matlab/glm_R_vs_lassoglm_MATLAB_real_data.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "check\n",
-    "\n",
     "this shows that, changing nonlinearity won't make much difference.\n",
     "\n",
     "notice there there is the loss (deviance, error, whatever you call it) is much different for MATLAB and R.\n",
     "\n",
-    "However, they match when using smaller datasets (check https://github.com/leelabcnbc/tang_jcompneuro/blob/master/results_ipynb/debug/glm_matlab_debug/glm_R_vs_lassoglm_MATLAB.ipynb).\n",
+    "However, they match when using smaller datasets (check [demo version](./glm_R_vs_lassoglm_MATLAB_demo_data.ipynb)).\n",
     "\n",
     "I think this is mostly due to R version being more precise than MATLAB verion (convergence, tol, etc.).\n",
     "\n",
-    "For MATLAB version `glmnet_cv_best_result.m` where I have no access to predictions made by each folds, I make them myself. Notice that the per-fold predictions provided by R function is not available to be obtained this way. Check source code <https://github.com/cran/glmnet/blob/2.0-13/R/cv.glmnet.R#L27>. Also <https://github.com/cran/glmnet/blob/2.0-13/ChangeLog#L19>. Basically, the sequence of lambda is chosen using all data, and each fold of data is fitted using their OWN sequence of lambdas. However, predictions on the test (left out) fold is made on the lambda sequence inferred from all data, using some interpolation (see <https://github.com/cran/glmnet/blob/2.0-13/man/predict.glmnet.Rd>, on `exact`). So possibly, the difference in loss can be due to this approximation as well."
+    "For MATLAB version `glmnet_cv_best_result.m` where I have no access to predictions made by each folds, I make them myself. Notice that the per-fold predictions provided by R function is not available to be obtained this way. Check source code <https://github.com/cran/glmnet/blob/2.0-13/R/cv.glmnet.R#L27>. Also <https://github.com/cran/glmnet/blob/2.0-13/ChangeLog#L19>. Basically, the sequence of lambda is chosen using all data, and each fold of data is fitted using their OWN sequence of lambdas. However, predictions on the test (left out) fold is made on the lambda sequence inferred from all data, using some interpolation (see <https://github.com/cran/glmnet/blob/2.0-13/man/predict.glmnet.Rd>, on `exact`). So possibly, the difference in loss can be due to this approximation as well.\n",
+    "\n",
+    "Another thing to notice is that the lambda sequence for Poisson and Gaussian are the same in this case (starting from `1.56812570e-02`. Not sure if this holds in general. Check [demo version](./glm_R_vs_lassoglm_MATLAB_demo_data.ipynb), where it holds as well. However, the lambda sequence for softplus is different."
    ]
   },
   {
