add some initial performance stuff, and make cnn wrapper demo repeatable

--- a/results_ipynb/debug/cnn/cnn_wrapper.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper.ipynb
@@ -40,16 +40,49 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b.12\n",
+      "{\n",
+      "  \"conv\": [\n",
+      "    {\n",
+      "      \"kernel_size\": 9,\n",
+      "      \"out_channel\": 12,\n",
+      "      \"stride\": 1,\n",
+      "      \"bn\": false,\n",
+      "      \"padding\": 0,\n",
+      "      \"pool\": {\n",
+      "        \"kernel_size\": 6,\n",
+      "        \"stride\": 2,\n",
+      "        \"padding\": 0,\n",
+      "        \"pool_type\": \"max\"\n",
+      "      }\n",
+      "    }\n",
+      "  ],\n",
+      "  \"fc\": {\n",
+      "    \"factored\": false,\n",
+      "    \"dropout\": null\n",
+      "  },\n",
+      "  \"act_fn\": \"relu\",\n",
+      "  \"linear_output\": true\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
-    "trainer = get_trainer('b.12')"
+    "# this makes sure I have some numbers I can use as reference.\n",
+    "# this will help me make sure I don't make mistake when updating my cnn class.\n",
+    "trainer = get_trainer('b.12', cudnn_enabled=False, show_every=500, show_arch_config=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -57,22 +90,250 @@
      "output_type": "stream",
      "text": [
       "========starting phase 1/1==========\n",
-      "early stopping after epoch 4000\n",
-      "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.718435 12.087912797927856 sec\n",
-      "========starting phase 1/1==========\n",
+      "========starting epoch 500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.63572931, 'corr': 0.63572931, 'mse': 0.0045156218}\n",
+      "test metric\n",
+      " {'neg_corr': -0.55854899, 'corr': 0.55854899, 'mse': 0.0054654186}\n",
+      "========done epoch 500==========\n",
+      "========starting epoch 1000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.68851966, 'corr': 0.68851966, 'mse': 0.0040142476}\n",
+      "test metric\n",
+      " {'neg_corr': -0.6300143, 'corr': 0.6300143, 'mse': 0.0046986411}\n",
+      "========done epoch 1000==========\n",
+      "========starting epoch 1500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.69041532, 'corr': 0.69041532, 'mse': 0.0040170122}\n",
+      "test metric\n",
+      " {'neg_corr': -0.6310131, 'corr': 0.6310131, 'mse': 0.0047987471}\n",
+      "========done epoch 1500==========\n",
+      "========starting epoch 2000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.6962291, 'corr': 0.6962291, 'mse': 0.003915254}\n",
+      "test metric\n",
+      " {'neg_corr': -0.65804261, 'corr': 0.65804261, 'mse': 0.0044698608}\n",
+      "========done epoch 2000==========\n",
+      "========starting epoch 2500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.69642466, 'corr': 0.69642466, 'mse': 0.003974569}\n",
+      "test metric\n",
+      " {'neg_corr': -0.65588236, 'corr': 0.65588236, 'mse': 0.0046136286}\n",
+      "========done epoch 2500==========\n",
+      "========starting epoch 3000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.70477539, 'corr': 0.70477539, 'mse': 0.003841222}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66745782, 'corr': 0.66745782, 'mse': 0.0043011606}\n",
+      "========done epoch 3000==========\n",
       "early stopping after epoch 3400\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.685036 10.242006063461304 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.710113 27.88515591621399 sec\n",
       "========starting phase 1/1==========\n",
+      "========starting epoch 500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.58242083, 'corr': 0.58242083, 'mse': 0.0050145085}\n",
+      "test metric\n",
+      " {'neg_corr': -0.54189855, 'corr': 0.54189855, 'mse': 0.0055753309}\n",
+      "========done epoch 500==========\n",
+      "========starting epoch 1000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67524451, 'corr': 0.67524451, 'mse': 0.0042270739}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66860282, 'corr': 0.66860282, 'mse': 0.0043081464}\n",
+      "========done epoch 1000==========\n",
+      "========starting epoch 1500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67770559, 'corr': 0.67770559, 'mse': 0.0040980065}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66059065, 'corr': 0.66059065, 'mse': 0.0044270265}\n",
+      "========done epoch 1500==========\n",
+      "========starting epoch 2000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67220443, 'corr': 0.67220443, 'mse': 0.0042007943}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66300273, 'corr': 0.66300273, 'mse': 0.004338921}\n",
+      "========done epoch 2000==========\n",
+      "========starting epoch 2500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67204046, 'corr': 0.67204046, 'mse': 0.0041767345}\n",
+      "test metric\n",
+      " {'neg_corr': -0.6711058, 'corr': 0.6711058, 'mse': 0.0044029523}\n",
+      "========done epoch 2500==========\n",
+      "========starting epoch 3000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.68079323, 'corr': 0.68079323, 'mse': 0.0040621771}\n",
+      "test metric\n",
+      " {'neg_corr': -0.6729297, 'corr': 0.6729297, 'mse': 0.0042969473}\n",
+      "========done epoch 3000==========\n",
+      "========starting epoch 3500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67372966, 'corr': 0.67372966, 'mse': 0.0041332608}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66470808, 'corr': 0.66470808, 'mse': 0.0044399449}\n",
+      "========done epoch 3500==========\n",
+      "early stopping after epoch 3900\n",
+      "========end phase 1/1==========\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.690141 32.53536891937256 sec\n",
+      "========starting phase 1/1==========\n",
+      "========starting epoch 500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.63288826, 'corr': 0.63288826, 'mse': 0.0045584086}\n",
+      "test metric\n",
+      " {'neg_corr': -0.55924916, 'corr': 0.55924916, 'mse': 0.0055191503}\n",
+      "========done epoch 500==========\n",
+      "========starting epoch 1000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.68387246, 'corr': 0.68387246, 'mse': 0.0040266742}\n",
+      "test metric\n",
+      " {'neg_corr': -0.62891871, 'corr': 0.62891871, 'mse': 0.0047238027}\n",
+      "========done epoch 1000==========\n",
+      "========starting epoch 1500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.6998859, 'corr': 0.6998859, 'mse': 0.004029369}\n",
+      "test metric\n",
+      " {'neg_corr': -0.63505083, 'corr': 0.63505083, 'mse': 0.0048958748}\n",
+      "========done epoch 1500==========\n",
+      "========starting epoch 2000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.70412564, 'corr': 0.70412564, 'mse': 0.0038258696}\n",
+      "test metric\n",
+      " {'neg_corr': -0.65748477, 'corr': 0.65748477, 'mse': 0.0044442383}\n",
+      "========done epoch 2000==========\n",
+      "========starting epoch 2500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.69209665, 'corr': 0.69209665, 'mse': 0.0041443943}\n",
+      "test metric\n",
+      " {'neg_corr': -0.64902413, 'corr': 0.64902413, 'mse': 0.0048120241}\n",
+      "========done epoch 2500==========\n",
+      "========starting epoch 3000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.70031053, 'corr': 0.70031053, 'mse': 0.003863184}\n",
+      "test metric\n",
+      " {'neg_corr': -0.64973557, 'corr': 0.64973557, 'mse': 0.004553176}\n",
+      "========done epoch 3000==========\n",
+      "========starting epoch 3500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.70663542, 'corr': 0.70663542, 'mse': 0.0039582523}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66799891, 'corr': 0.66799891, 'mse': 0.0047258628}\n",
+      "========done epoch 3500==========\n",
+      "========starting epoch 4000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.69746035, 'corr': 0.69746035, 'mse': 0.004139185}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66857821, 'corr': 0.66857821, 'mse': 0.0047234786}\n",
+      "========done epoch 4000==========\n",
       "early stopping after epoch 4300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.709971 12.094615697860718 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.711871 34.68004894256592 sec\n",
       "========starting phase 1/1==========\n",
-      "early stopping after epoch 3800\n",
+      "========starting epoch 500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.61934322, 'corr': 0.61934322, 'mse': 0.0047575394}\n",
+      "test metric\n",
+      " {'neg_corr': -0.60197139, 'corr': 0.60197139, 'mse': 0.0051901555}\n",
+      "========done epoch 500==========\n",
+      "========starting epoch 1000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.63932705, 'corr': 0.63932705, 'mse': 0.0045523588}\n",
+      "test metric\n",
+      " {'neg_corr': -0.63634038, 'corr': 0.63634038, 'mse': 0.0047682016}\n",
+      "========done epoch 1000==========\n",
+      "========starting epoch 1500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.64557439, 'corr': 0.64557439, 'mse': 0.0044793356}\n",
+      "test metric\n",
+      " {'neg_corr': -0.63514382, 'corr': 0.63514382, 'mse': 0.0048641423}\n",
+      "========done epoch 1500==========\n",
+      "========starting epoch 2000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.6473645, 'corr': 0.6473645, 'mse': 0.0044370126}\n",
+      "test metric\n",
+      " {'neg_corr': -0.64049321, 'corr': 0.64049321, 'mse': 0.0048097}\n",
+      "========done epoch 2000==========\n",
+      "========starting epoch 2500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.65379882, 'corr': 0.65379882, 'mse': 0.0045759501}\n",
+      "test metric\n",
+      " {'neg_corr': -0.6509648, 'corr': 0.6509648, 'mse': 0.0050249537}\n",
+      "========done epoch 2500==========\n",
+      "========starting epoch 3000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.65381348, 'corr': 0.65381348, 'mse': 0.0043740757}\n",
+      "test metric\n",
+      " {'neg_corr': -0.65126151, 'corr': 0.65126151, 'mse': 0.0046181246}\n",
+      "========done epoch 3000==========\n",
+      "========starting epoch 3500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.65943617, 'corr': 0.65943617, 'mse': 0.0044152462}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66016358, 'corr': 0.66016358, 'mse': 0.0046483944}\n",
+      "========done epoch 3500==========\n",
+      "========starting epoch 4000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.66030574, 'corr': 0.66030574, 'mse': 0.0045250496}\n",
+      "test metric\n",
+      " {'neg_corr': -0.64607823, 'corr': 0.64607823, 'mse': 0.0049954788}\n",
+      "========done epoch 4000==========\n",
+      "========starting epoch 4500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67301512, 'corr': 0.67301512, 'mse': 0.0042672446}\n",
+      "test metric\n",
+      " {'neg_corr': -0.65381265, 'corr': 0.65381265, 'mse': 0.0046609333}\n",
+      "========done epoch 4500==========\n",
+      "========starting epoch 5000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67248851, 'corr': 0.67248851, 'mse': 0.0042833225}\n",
+      "test metric\n",
+      " {'neg_corr': -0.65111983, 'corr': 0.65111983, 'mse': 0.0047451742}\n",
+      "========done epoch 5000==========\n",
+      "========starting epoch 5500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.68238991, 'corr': 0.68238991, 'mse': 0.0040850877}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66618305, 'corr': 0.66618305, 'mse': 0.0044598053}\n",
+      "========done epoch 5500==========\n",
+      "========starting epoch 6000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.66700858, 'corr': 0.66700858, 'mse': 0.0043930905}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66855633, 'corr': 0.66855633, 'mse': 0.0045567942}\n",
+      "========done epoch 6000==========\n",
+      "========starting epoch 6500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.66811126, 'corr': 0.66811126, 'mse': 0.0043409159}\n",
+      "test metric\n",
+      " {'neg_corr': -0.66839123, 'corr': 0.66839123, 'mse': 0.0045906617}\n",
+      "========done epoch 6500==========\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========starting epoch 7000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.68340194, 'corr': 0.68340194, 'mse': 0.0042190133}\n",
+      "test metric\n",
+      " {'neg_corr': -0.68092716, 'corr': 0.68092716, 'mse': 0.0044638477}\n",
+      "========done epoch 7000==========\n",
+      "========starting epoch 7500==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67543858, 'corr': 0.67543858, 'mse': 0.0041853362}\n",
+      "test metric\n",
+      " {'neg_corr': -0.68071425, 'corr': 0.68071425, 'mse': 0.0043427013}\n",
+      "========done epoch 7500==========\n",
+      "========starting epoch 8000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.67617738, 'corr': 0.67617738, 'mse': 0.0041641328}\n",
+      "test metric\n",
+      " {'neg_corr': -0.67476058, 'corr': 0.67476058, 'mse': 0.0043007769}\n",
+      "========done epoch 8000==========\n",
+      "early stopping after epoch 8300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.66495 10.999557733535767 sec\n",
-      "best config 1e-3L2_1e-3L2_sgd_mse with val 0.718435 and test 0.668899\n"
+      "1e-4L2_1e-3L2_adam002_mse 0.683987 67.01182293891907 sec\n",
+      "best config 1e-4L2_1e-3L2_sgd_mse with val 0.711871 and test 0.677659\n"
      ]
     }
    ],
@@ -89,16 +350,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y_test_hat [[ 0.2033187 ]\n",
-      " [ 0.18664643]\n",
-      " [ 0.17300117]\n",
+      "y_test_hat [[ 0.19222629]\n",
+      " [ 0.18913057]\n",
+      " [ 0.16523588]\n",
       " ..., \n",
-      " [ 0.17785211]\n",
-      " [ 0.26618612]\n",
-      " [ 0.18361613]]\n",
+      " [ 0.14442816]\n",
+      " [ 0.26093942]\n",
+      " [ 0.16968615]]\n",
       "(1900, 1) float32\n",
-      "corr 0.668899\n",
-      "attrs {'best_val': 0.71843487, 'best_config': '1e-3L2_1e-3L2_sgd_mse'}\n"
+      "corr 0.677659\n",
+      "attrs {'best_val': 0.71187097, 'best_config': '1e-4L2_1e-3L2_sgd_mse'}\n"
      ]
     }
    ],
