finish performance by model size

--- a/results_ipynb/debug/cnn/cnn_wrapper.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tang_jcompneuro.model_fitting_cnn import get_trainer"
+    "from tang_jcompneuro.model_fitting_cnn import get_trainer, models_to_train"
    ]
   },
   {
@@ -75,7 +75,8 @@
    "source": [
     "# this makes sure I have some numbers I can use as reference.\n",
     "# this will help me make sure I don't make mistake when updating my cnn class.\n",
-    "trainer = get_trainer('b.12', cudnn_enabled=False, show_every=500, show_arch_config=True)"
+    "trainer = get_trainer('b.12', cudnn_enabled=False, show_every=500,\n",
+    "                      show_arch_config=True)"
    ]
   },
   {
@@ -89,6 +90,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "CNN(\n",
+      "  (conv): Sequential(\n",
+      "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
+      "    (act0): ReLU()\n",
+      "    (pool0): MaxPool2d(kernel_size=(6, 6), stride=(2, 2), dilation=(1, 1), ceil_mode=False)\n",
+      "  )\n",
+      "  (fc): Sequential(\n",
+      "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
+      "  )\n",
+      ")\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -128,7 +139,17 @@
       "========done epoch 3000==========\n",
       "early stopping after epoch 3400\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.710113 27.88515591621399 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.710113 27.650874137878418 sec\n",
+      "CNN(\n",
+      "  (conv): Sequential(\n",
+      "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
+      "    (act0): ReLU()\n",
+      "    (pool0): MaxPool2d(kernel_size=(6, 6), stride=(2, 2), dilation=(1, 1), ceil_mode=False)\n",
+      "  )\n",
+      "  (fc): Sequential(\n",
+      "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
+      "  )\n",
+      ")\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -174,7 +195,17 @@
       "========done epoch 3500==========\n",
       "early stopping after epoch 3900\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.690141 32.53536891937256 sec\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.690141 31.42216658592224 sec\n",
+      "CNN(\n",
+      "  (conv): Sequential(\n",
+      "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
+      "    (act0): ReLU()\n",
+      "    (pool0): MaxPool2d(kernel_size=(6, 6), stride=(2, 2), dilation=(1, 1), ceil_mode=False)\n",
+      "  )\n",
+      "  (fc): Sequential(\n",
+      "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
+      "  )\n",
+      ")\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -226,7 +257,17 @@
       "========done epoch 4000==========\n",
       "early stopping after epoch 4300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.711871 34.68004894256592 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.711871 34.59226727485657 sec\n",
+      "CNN(\n",
+      "  (conv): Sequential(\n",
+      "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
+      "    (act0): ReLU()\n",
+      "    (pool0): MaxPool2d(kernel_size=(6, 6), stride=(2, 2), dilation=(1, 1), ceil_mode=False)\n",
+      "  )\n",
+      "  (fc): Sequential(\n",
+      "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
+      "  )\n",
+      ")\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -275,7 +316,13 @@
       " {'neg_corr': -0.66030574, 'corr': 0.66030574, 'mse': 0.0045250496}\n",
       "test metric\n",
       " {'neg_corr': -0.64607823, 'corr': 0.64607823, 'mse': 0.0049954788}\n",
-      "========done epoch 4000==========\n",
+      "========done epoch 4000==========\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "========starting epoch 4500==========\n",
       "val metric\n",
       " {'neg_corr': -0.67301512, 'corr': 0.67301512, 'mse': 0.0042672446}\n",
@@ -305,13 +352,7 @@
       " {'neg_corr': -0.66811126, 'corr': 0.66811126, 'mse': 0.0043409159}\n",
       "test metric\n",
       " {'neg_corr': -0.66839123, 'corr': 0.66839123, 'mse': 0.0045906617}\n",
-      "========done epoch 6500==========\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "========done epoch 6500==========\n",
       "========starting epoch 7000==========\n",
       "val metric\n",
       " {'neg_corr': -0.68340194, 'corr': 0.68340194, 'mse': 0.0042190133}\n",
@@ -332,7 +373,7 @@
       "========done epoch 8000==========\n",
       "early stopping after epoch 8300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.683987 67.01182293891907 sec\n",
+      "1e-4L2_1e-3L2_adam002_mse 0.683987 67.35749077796936 sec\n",
       "best config 1e-4L2_1e-3L2_sgd_mse with val 0.711871 and test 0.677659\n"
      ]
     }
