add more configs for 1layer variants

--- a/results_ipynb/debug/cnn/cnn_wrapper.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper.ipynb
@@ -45,7 +45,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b.12\n",
+      "b.12 scale hack None\n",
       "{\n",
       "  \"conv\": [\n",
       "    {\n",
@@ -139,7 +139,7 @@
       "========done epoch 3000==========\n",
       "early stopping after epoch 3400\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.710113 27.650874137878418 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.710113 43.139100551605225 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -195,7 +195,7 @@
       "========done epoch 3500==========\n",
       "early stopping after epoch 3900\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.690141 31.42216658592224 sec\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.690141 48.71194577217102 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -257,7 +257,7 @@
       "========done epoch 4000==========\n",
       "early stopping after epoch 4300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.711871 34.59226727485657 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.711871 53.35457158088684 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -373,7 +373,7 @@
       "========done epoch 8000==========\n",
       "early stopping after epoch 8300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.683987 67.35749077796936 sec\n",
+      "1e-4L2_1e-3L2_adam002_mse 0.683987 103.1225528717041 sec\n",
       "best config 1e-4L2_1e-3L2_sgd_mse with val 0.711871 and test 0.677659\n"
      ]
     }
