--- a/results_ipynb/debug/cnn/cnn_wrapper.ipynb
+++ b/results_ipynb/debug/cnn/cnn_wrapper.ipynb
@@ -64,7 +64,8 @@
       "  ],\n",
       "  \"fc\": {\n",
       "    \"factored\": false,\n",
-      "    \"dropout\": null\n",
+      "    \"dropout\": null,\n",
+      "    \"mlp\": null\n",
       "  },\n",
       "  \"act_fn\": \"relu\",\n",
       "  \"linear_output\": true\n",
@@ -90,6 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[(6080, 1, 20, 20), (6080, 1), (1900, 1, 20, 20), (1900, 1), (1520, 1, 20, 20), (1520, 1)]\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -100,6 +102,7 @@
       "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
       "  )\n",
       ")\n",
+      "# of params 1177\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -139,7 +142,7 @@
       "========done epoch 3000==========\n",
       "early stopping after epoch 3400\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_sgd_mse 0.710113 43.139100551605225 sec\n",
+      "1e-3L2_1e-3L2_sgd_mse 0.710113 28.66959309577942 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -150,6 +153,7 @@
       "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
       "  )\n",
       ")\n",
+      "# of params 1177\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -195,7 +199,7 @@
       "========done epoch 3500==========\n",
       "early stopping after epoch 3900\n",
       "========end phase 1/1==========\n",
-      "1e-3L2_1e-3L2_adam002_mse 0.690141 48.71194577217102 sec\n",
+      "1e-3L2_1e-3L2_adam002_mse 0.690141 34.99722695350647 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -206,6 +210,7 @@
       "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
       "  )\n",
       ")\n",
+      "# of params 1177\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -257,7 +262,7 @@
       "========done epoch 4000==========\n",
       "early stopping after epoch 4300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_sgd_mse 0.711871 53.35457158088684 sec\n",
+      "1e-4L2_1e-3L2_sgd_mse 0.711871 38.81791663169861 sec\n",
       "CNN(\n",
       "  (conv): Sequential(\n",
       "    (conv0): Conv2d(1, 12, kernel_size=(9, 9), stride=(1, 1))\n",
@@ -268,6 +273,7 @@
       "    (fc): Linear(in_features=192, out_features=1, bias=True)\n",
       "  )\n",
       ")\n",
+      "# of params 1177\n",
       "========starting phase 1/1==========\n",
       "========starting epoch 500==========\n",
       "val metric\n",
@@ -310,19 +316,19 @@
       " {'neg_corr': -0.65943617, 'corr': 0.65943617, 'mse': 0.0044152462}\n",
       "test metric\n",
       " {'neg_corr': -0.66016358, 'corr': 0.66016358, 'mse': 0.0046483944}\n",
-      "========done epoch 3500==========\n",
-      "========starting epoch 4000==========\n",
-      "val metric\n",
-      " {'neg_corr': -0.66030574, 'corr': 0.66030574, 'mse': 0.0045250496}\n",
-      "test metric\n",
-      " {'neg_corr': -0.64607823, 'corr': 0.64607823, 'mse': 0.0049954788}\n",
-      "========done epoch 4000==========\n"
+      "========done epoch 3500==========\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "========starting epoch 4000==========\n",
+      "val metric\n",
+      " {'neg_corr': -0.66030574, 'corr': 0.66030574, 'mse': 0.0045250496}\n",
+      "test metric\n",
+      " {'neg_corr': -0.64607823, 'corr': 0.64607823, 'mse': 0.0049954788}\n",
+      "========done epoch 4000==========\n",
       "========starting epoch 4500==========\n",
       "val metric\n",
       " {'neg_corr': -0.67301512, 'corr': 0.67301512, 'mse': 0.0042672446}\n",
@@ -373,7 +379,7 @@
       "========done epoch 8000==========\n",
       "early stopping after epoch 8300\n",
       "========end phase 1/1==========\n",
-      "1e-4L2_1e-3L2_adam002_mse 0.683987 103.1225528717041 sec\n",
+      "1e-4L2_1e-3L2_adam002_mse 0.683987 74.1102397441864 sec\n",
       "best config 1e-4L2_1e-3L2_sgd_mse with val 0.711871 and test 0.677659\n"
      ]
     }
@@ -400,7 +406,7 @@
       " [ 0.16968615]]\n",
       "(1900, 1) float32\n",
       "corr 0.677659\n",
-      "attrs {'best_val': 0.71187097, 'best_config': '1e-4L2_1e-3L2_sgd_mse'}\n"
+      "attrs {'best_val': 0.71187097, 'best_config': '1e-4L2_1e-3L2_sgd_mse', 'inf_counter': 0}\n"
      ]
     }
    ],
